# Monitord

./: .gitignore  Cargo.toml  README.md  config.yaml.example  package-lock.json  package.json  ТЗ_monitord_Rust_Prometheus_Telegram.docx
.github/workflows/: build-desktop.yml
desktop-electron/: main.js  package-lock.json  package.json  preload.js
desktop-electron/src/: index.html  renderer.js  styles.css
src/: config.rs  http.rs  main.rs  metrics.rs  state.rs  telegram.rs
src/collectors/: checks.rs  mod.rs  system.rs
