[package]
name = "monitord"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
axum = "0.7"
prometheus = "0.13"
sysinfo = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
humantime = "2.1"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
